# play_exercise

./: .gitattributes  .gitignore  README.md
cpp_test/class_template/: CMakeCache.txt  CMakeLists.txt  Makefile  class_template.sh  cmake_install.cmake  compare_teleplate.cpp(no_use)  compare_teleplate.hpp  main  main.cpp  readme.txt
cpp_test/ringbuffer/: ringbuffer.c
cpp_test/virtual_test/: BaseClassVirtualTest.cpp  CMakeLists.txt  readme.txt  virtual_test.sh
linux_test/linux_socket/: main_1  main_2  rzy_process_1_main.c  rzy_process_2_main.c  test  test.c
tools_test/rzy_com/: Makefile  com_function.c  com_function.h  com_main.c  com_main.h  often_define.h  rcom  rzy_com.c  rzy_com.h  rzy_main.c  rzy_main.h  rzycom  variable_core.h
